6. [升级]将springboot版本从1.5.8升级到2.0.7版本。 7. [升级]将springcloud版本升级到了Finchley.SR2版本。 8. [优化]优化了因springboot和springcloud版本升级后的服务注册&服务发现相关的诸多问题。

--- a/myclouds-admin-webserver/src/main/resources/application.properties
+++ b/myclouds-admin-webserver/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=myclouds-admin-webserver
 server.port=80
-server.context-path=/
+server.servlet.context-path=/
 
 #==========compression===========#
 server.compression.enabled=true
@@ -10,16 +10,14 @@ server.compression.min-response-size=2048
 #========= HttpSession  ==========#
 spring.session.store-type=redis
 #TimeUnit-Second(7200s=2h)
-server.session.timeout=7200
+server.servlet.session.timeout=7200
 
 #============ Redis Configuration ==========#
 spring.redis.host=127.0.0.1
 spring.redis.password= 
 spring.redis.port=6379
-spring.redis.pool.max-idle=50
-spring.redis.pool.min-idle=10
-spring.redis.pool.max-active=200
-spring.redis.pool.max-wait=-1 
+spring.redis.jedis.pool.max-idle=100
+spring.redis.jedis.pool.max-active=100
 
 # Charset of HTTP requests and responses. Added to the "Content-Type" header if not set explicitly.
 spring.http.encoding.charset=UTF-8
@@ -50,18 +48,13 @@ spring.cloud.consul.discovery.register=true
 spring.cloud.consul.discovery.enabled=true
 spring.cloud.consul.discovery.instance-id=myclouds-admin-webserver
 spring.cloud.consul.discovery.prefer-ip-address=true
-spring.cloud.consul.discovery.health-check-path=${management.context-path}/health
+spring.cloud.consul.discovery.health-check-path=${management.server.servlet.context-path}/health
 spring.cloud.consul.discovery.health-check-interval=10s
 #============ Consul Configuration END ==========#
 
 #set null object not output when jackson serialize
 spring.jackson.default-property-inclusion=NON_NULL
 
-management.security.enabled=false
-#if set true then consul health will not be ok
-management.health.consul.enabled=false
-management.context-path=/act
-endpoints.health.enabled=true
-endpoints.health.sensitive=false
-endpoints.metrics.enabled=true
-endpoints.metrics.sensitive=false
+management.endpoint.health.enabled=true
+management.endpoint.metrics.enabled=true
+management.server.servlet.context-path=/actuator
