--- a/myclouds-admin-server/src/main/resources/application.properties
+++ b/myclouds-admin-server/src/main/resources/application.properties
@@ -1,15 +1,13 @@
 spring.application.name=myclouds-admin-server
 server.port=8200
-server.context-path=/
+server.servlet.context-path=/
 
 #============ Redis Configuration ==========#
 spring.redis.host=127.0.0.1
 spring.redis.password= 
 spring.redis.port=6379
-spring.redis.pool.max-idle=50
-spring.redis.pool.min-idle=10
-spring.redis.pool.max-active=200
-spring.redis.pool.max-wait=-1 
+spring.redis.jedis.pool.max-idle=100
+spring.redis.jedis.pool.max-active=100
 
 # Charset of HTTP requests and responses. Added to the "Content-Type" header if not set explicitly.
 spring.http.encoding.charset=UTF-8
@@ -23,7 +21,7 @@ mybatis.mapperLocations=classpath*:**/*Mapper.xml
 mybatis.config-location=classpath:mybatis-config.xml
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/myclouds?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/myclouds?useUnicode=true&serverTimezone=GMT&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.druid.initial-size=10
@@ -38,7 +36,7 @@ spring.datasource.druid.test-while-idle=true
 
 #============ Consul Configuration Begin ==========#
 spring.cloud.consul.enabled=true
-spring.cloud.consul.host=127.0.0.1
+spring.cloud.consul.host=localhost
 spring.cloud.consul.port=8500
 #To disable the service registration you can set false
 spring.cloud.consul.discovery.register=true
@@ -46,7 +44,7 @@ spring.cloud.consul.discovery.register=true
 spring.cloud.consul.discovery.enabled=true
 spring.cloud.consul.discovery.instance-id=myclouds-admin-server
 spring.cloud.consul.discovery.prefer-ip-address=true
-spring.cloud.consul.discovery.health-check-path=${management.context-path}/health
+spring.cloud.consul.discovery.health-check-path=${management.server.servlet.context-path}/health
 spring.cloud.consul.discovery.health-check-interval=10s
 #spring.cloud.consul.discovery.tags=dev
 #============ Consul Configuration END ==========#
@@ -54,11 +52,6 @@ spring.cloud.consul.discovery.health-check-interval=10s
 #set null object not output when jackson serialize
 spring.jackson.default-property-inclusion=NON_NULL
 
-management.security.enabled=false
-#if set true then consul health will not be ok
-management.health.consul.enabled=false
-management.context-path=/act
-endpoints.health.enabled=true
-endpoints.health.sensitive=false
-endpoints.metrics.enabled=true
-endpoints.metrics.sensitive=false
+management.endpoint.health.enabled=true
+management.endpoint.metrics.enabled=true
+management.server.servlet.context-path=/actuator
