--- a/pom.xml
+++ b/pom.xml
@@ -11,16 +11,16 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.7.RELEASE</version>
+		<version>2.0.8.RELEASE</version>
 		<relativePath />
 	</parent>
 
 	<modules>
 		<module>myclouds-common</module>
 		<module>myclouds-domain</module>
+		<module>myclouds-config-server</module>
 		<module>myclouds-admin-server</module>
 		<module>myclouds-admin-webserver</module>
-		<module>myclouds-builder-standalone</module>
 	</modules>
 	
 	<!--依赖管理，用于管理spring-cloud的依赖 -->
