--- a/myclouds-admin-server/src/main/resources/application.yml
+++ b/myclouds-admin-server/src/main/resources/application.yml
@@ -15,6 +15,7 @@ spring:
       host: ${consul-host:127.0.0.1}
       port: ${consul-port:8500}
       discovery:
+        register: true
         instance-id: myclouds-admin-server
         prefer-ip-address: true
         health-check-path: ${management.server.servlet.context-path}/health
