--- a/myclouds-config-server/src/main/resources/application.yml
+++ b/myclouds-config-server/src/main/resources/application.yml
@@ -16,6 +16,7 @@ spring:
       host: ${consul-host:localhost}
       port: ${consul-port:8500}
       discovery:
+        register: true
         instance-id: myclouds-config-server
         prefer-ip-address: true
         health-check-path: ${management.server.servlet.context-path}/health
