--- a/myclouds-admin-webserver/src/main/resources/application.yml
+++ b/myclouds-admin-webserver/src/main/resources/application.yml
@@ -31,6 +31,7 @@ spring:
       discovery:
         register: true
         prefer-ip-address: true
+        # hostname: ${spring.cloud.client.ip_address}
         health-check-path: ${management.server.servlet.context-path}/health
         health-check-interval: 10s
   redis:
