--- a/myclouds-admin-server/src/main/resources/bootstrap.yml
+++ b/myclouds-admin-server/src/main/resources/bootstrap.yml
@@ -1,9 +1,9 @@
 spring:
   application:
-    name: myclouds-admin-server
+    name: myclouds-system-service
   cloud:
     config:
       profile: ${config-profile:dev}
       discovery:
-        service-id: myclouds-config-server
+        service-id: myclouds-config
         enabled: true
