add/update gateway

--- a/myclouds-gateway/pom.xml
+++ b/myclouds-gateway/pom.xml
@@ -30,6 +30,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
         </dependency>
+        <!-- 网关中的限流算法用到redis -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis-reactive</artifactId>
+         </dependency>
 	</dependencies>
 
 	<build>
