--- a/myclouds-gateway/src/main/resources/bootstrap.yml
+++ b/myclouds-gateway/src/main/resources/bootstrap.yml
@@ -1,3 +1,9 @@
 spring:
   application:
-    name: myclouds-config
+    name: myclouds-gateway
+  cloud:
+    config:
+      profile: ${config-profile:dev}
+      discovery:
+        service-id: myclouds-config
+        enabled: true
