--- a/myclouds-gateway/src/main/resources/application.yml
+++ b/myclouds-gateway/src/main/resources/application.yml
@@ -1,26 +1,36 @@
 server:
-  port: 9090
+  port: 8080
   servlet:
     context-path: /
-
+    
 spring:
-  profiles:
-      active: native
+  http:
+    encoding:
+      charset: UTF-8
+      enabled: true
+      force: true
   cloud:
-    config: #推荐大部分项目缺省使用local方式，也可以根据实际情况改为git方式或者jdbc的方式来管理维护配置文件
-      server:
-        native:
-          search-locations: classpath:/config
     consul:
       enabled: true
-      host: ${consul-host:localhost}
+      host: ${consul-host:127.0.0.1}
       port: ${consul-port:8500}
       discovery:
         register: true
         prefer-ip-address: true
+        #hostname: ${spring.cloud.client.ip_address}
         health-check-path: ${management.server.servlet.context-path}/health
         health-check-interval: 10s
-
+  redis:
+    host: ${redis-host}
+    port: ${redis-port}
+    password: ${redis-password}
+    jedis:
+      pool:
+        min-idle: 10
+        max-idle: 50
+        max-wait: -1
+        max-active: 200
+  
 management:
   endpoint:
     health:
