--- a/myclouds-gateway/pom.xml
+++ b/myclouds-gateway/pom.xml
@@ -35,6 +35,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis-reactive</artifactId>
          </dependency>
+         <dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-config-client</artifactId>
+		 </dependency>
 	</dependencies>
 
 	<build>
