add some gateway features

--- a/myclouds-gateway/src/main/resources/application.yml
+++ b/myclouds-gateway/src/main/resources/application.yml
@@ -1,4 +1,6 @@
-# hystrix.command.fallbackcmd.execution.isolation.thread.timeoutInMilliseconds: 8000
+# 断路器超时时间，缺省是1000ms，太小了
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 30000
+
 server:
   port: 8080
   servlet:
@@ -33,7 +35,7 @@ spring:
         health-check-interval: 10s
     gateway:
       routes:
-      - id: myclouds-system
+      - id: myclouds-system-service
         uri: lb://myclouds-system-service  # 服务中心的实例名；lb(load balance)启用客户端负载均衡
         predicates:
         - Path=/admin/system/**
