--- a/myclouds-common/pom.xml
+++ b/myclouds-common/pom.xml
@@ -17,7 +17,11 @@
 	</properties>
 
 	<dependencies>
-
+		<dependency>
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-core</artifactId>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
