--- a/myclouds-gateway/pom.xml
+++ b/myclouds-gateway/pom.xml
@@ -25,6 +25,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-gateway</artifactId>
+            <version>2.1.1.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -39,8 +40,9 @@
 		    <groupId>org.springframework.cloud</groupId>
 		    <artifactId>spring-cloud-config-client</artifactId>
 		 </dependency>
+	
 	</dependencies>
-
+	
 	<build>
 		<plugins>
 			<plugin>
