--- a/myclouds-gateway/src/main/resources/application.yml
+++ b/myclouds-gateway/src/main/resources/application.yml
@@ -1,6 +1,3 @@
-# 断路器超时时间，缺省是1000ms，太小了
-hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 15000
-
 server:
   port: 8080
   servlet:
@@ -35,15 +32,20 @@ spring:
         health-check-interval: 10s
     gateway:
       routes:
-      - id: myclouds-system-service-route
+      - id: system-route
         uri: lb://myclouds-system-service  # 服务中心的实例名；lb(load balance)启用客户端负载均衡
         predicates:
         - Path=/admin/system/**
         filters:
-        - name: Hystrix  # 熔断Filter
+        - name: RequestRateLimiter
           args:
-            name: booksFallbackCommand
-            fallbackUri: forward:/fallback/books   # 降级处理
+            key-resolver: '#{@globalKeyResolver}'  # 动态获取服务实例进行以服务为单位的全局限流配置，@see GlobalKeyResolver.solve()
+            redis-rate-limiter.replenishRate: 5000
+            redis-rate-limiter.burstCapacity: 5000
+#        - name: Hystrix  # 熔断Filter
+#          args:
+#            name: systemFallbackCommand
+#            fallbackUri: forward:/fallback/default   # 降级处理
       
 management:
   endpoint:
@@ -54,3 +56,7 @@ management:
   server:
     servlet:
       context-path: /actuator
+      
+# 断路器超时时间，缺省是1000ms ，default全局有效，filter-name指定应用有效
+# 实测：网关上面的hystrix效果并不理想，jmeter并发测试，调用未超时也会进入fallback。@see https://github.com/spring-cloud/spring-cloud-gateway/issues/1035
+# hystrix.command.systemFallbackCommand.execution.isolation.thread.timeoutInMilliseconds: 15000
