re-generate domain object for myclouds-system db schema

--- a/myclouds-builder/src/main/resources/application.properties
+++ b/myclouds-builder/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=myclouds-builder
 
 ##MySQL
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://127.0.0.1:3306/myclouds?useUnicode=true&characterEncoding=utf-8&remarks=true&useInformationSchema=true
+spring.datasource.url = jdbc:mysql://127.0.0.1:3306/myclouds-system?useUnicode=true&characterEncoding=utf-8&remarks=true&useInformationSchema=true
 spring.datasource.username = root
 spring.datasource.password = root
 
@@ -11,9 +11,6 @@ spring.datasource.password = root
 
 #MyClouds Builder Configuration
 my.builder.author=myclouds team
-my.builder.domain.outFilePath=E:/OSWORKS/01.MyClouds/git/myclouds-domain-entity/src/main/java/com/gitee/myclouds/admin/domain
-my.builder.domain.packagePath=com.gitee.myclouds.admin.domain
-my.builder.domain.tables=my_org, my_user
-#entity,mapper entity(*Entity.java) | mapper(*Mapper.java *Mapper.xml)
-#my.builder.domain.target=entity,mapper
-my.builder.domain.target=entity
+my.builder.domain.outFilePath=E:/OSWORKS/01.MyClouds/git/MyClouds/myclouds-system-service/src/main/java/com/gitee/myclouds/system/domain
+my.builder.domain.packagePath=com.gitee.myclouds.system.domain
+my.builder.domain.tables=my_dict,my_module,my_org,my_role,my_role_module,my_user,my_user_role
