--- a/myclouds-config/src/main/resources/config/myclouds-system-service-dev.yml
+++ b/myclouds-config/src/main/resources/config/myclouds-system-service-dev.yml
@@ -5,6 +5,6 @@ redis-password:
 
 mysql-host: localhost
 mysql-port: 3306
-mysql-database: myclouds
+mysql-database: myclouds-system
 mysql-user: root
 mysql-password: root
