--- a/myclouds-common/pom.xml
+++ b/myclouds-common/pom.xml
@@ -22,6 +22,11 @@
 			<artifactId>tomcat-embed-core</artifactId>
 			<scope>provided</scope>
 		</dependency>
+	    <dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-web</artifactId>
+	        <scope>provided</scope>
+       </dependency>
 	</dependencies>
 
 	<build>
