将myclouds-common拆分为：myclouds-common和myclouds-base

--- a/myclouds-system-service/pom.xml
+++ b/myclouds-system-service/pom.xml
@@ -20,7 +20,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.gitee.myclouds</groupId>
-			<artifactId>myclouds-common</artifactId>
+			<artifactId>myclouds-base</artifactId>
 			<version>1.0</version>
 		</dependency>
 		<dependency>
