新增内部微服务的跨域拦截器样板代码和网关通用跨域配置。

--- a/myclouds-gateway/src/main/resources/application.yml
+++ b/myclouds-gateway/src/main/resources/application.yml
@@ -51,6 +51,7 @@ spring:
           '[/**]':
             #allowedOrigins: "http://127.0.0.1:8848"
             allowedOrigins: "*"
+            maxAge: 86400
             allowedMethods:
             - GET
             - POST
