--- a/myclouds-base/pom.xml
+++ b/myclouds-base/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>myclouds-base</artifactId>
@@ -17,7 +18,7 @@
 	</properties>
 
 	<dependencies>
-       <dependency>
+		<dependency>
 			<groupId>com.gitee.myclouds</groupId>
 			<artifactId>myclouds-common</artifactId>
 			<version>1.0</version>
@@ -27,11 +28,17 @@
 			<artifactId>tomcat-embed-core</artifactId>
 			<scope>provided</scope>
 		</dependency>
-	    <dependency>
-	        <groupId>org.springframework</groupId>
-	        <artifactId>spring-web</artifactId>
-	        <scope>provided</scope>
-       </dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
