--- a/myclouds-system-service/pom.xml
+++ b/myclouds-system-service/pom.xml
@@ -42,6 +42,10 @@
 			<version>1.3.2</version>
 		</dependency>
 		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
