--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,20 @@
 **/target/
-**/logs/
-
-# IntelliJ project files
-.idea
-*.iml
-**/out
-
-# Eclipse project files
-**/.classpath
-**/.project
-**/.settings/
 **/bin/
 
-# gradle
-.gradle
-**/build
+### Eclipse/STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
 
 # MacOS
 .DS_Store
-
