完善依赖管理，分离第三方依赖资源

--- a/pangu-basic/pom.xml
+++ b/pangu-basic/pom.xml
@@ -11,12 +11,25 @@
 	<name>pangu-basic</name>
 	<description>the basic lib of pangu rapid development framework</description>
 
+	<properties>
+		<java.version>1.8</java.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+	</properties>
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-dependencies</artifactId>
 				<version>2.2.5.RELEASE</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.gitee.pulanit</groupId>
+				<artifactId>pangu-dependencies</artifactId>
+				<version>5.0.0</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -38,31 +51,26 @@
 			<groupId>com.alibaba.boot</groupId>
 			<artifactId>nacos-config-spring-boot-starter</artifactId>
 			<scope>provided</scope>
-			<version>0.2.7</version>
 		</dependency>
 		<dependency>
 			<groupId>com.baomidou</groupId>
 			<artifactId>mybatis-plus-boot-starter</artifactId>
 			<scope>provided</scope>
-			<version>3.3.0</version>
 		</dependency>
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
 			<scope>provided</scope>
-			<version>2.9.2</version>
 		</dependency>
 		<dependency>
 			<groupId>cn.hutool</groupId>
 			<artifactId>hutool-all</artifactId>
 			<scope>provided</scope>
-			<version>4.6.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-collections4</artifactId>
 			<scope>provided</scope>
-			<version>4.4</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -70,5 +78,18 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
