管理第三方依赖资源

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,8 @@
 	
 	<modules>
 	    <module>pangu-parent</module>
-		<module>pangu-boot</module>
+		<module>pangu-basic</module>
+		<module>pangu-dependencies</module>
 	</modules>
 
 
