--- a/pangu-basic/pom.xml
+++ b/pangu-basic/pom.xml
@@ -4,7 +4,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	
-	<groupId>com.gitee.pulanit</groupId>
+	<groupId>com.gitee.pulanos</groupId>
 	<version>5.0.0</version>
 	<artifactId>pangu-basic</artifactId>
 	<packaging>jar</packaging>
@@ -27,7 +27,7 @@
 				<scope>import</scope>
 			</dependency>
 			<dependency>
-				<groupId>com.gitee.pulanit</groupId>
+				<groupId>com.gitee.pulanos</groupId>
 				<artifactId>pangu-dependencies</artifactId>
 				<version>5.0.0</version>
 				<type>pom</type>
