--- a/pangu-parent/pom.xml
+++ b/pangu-parent/pom.xml
@@ -18,13 +18,13 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
 
-	<groupId>com.gitee.pulanit</groupId>
+	<groupId>com.gitee.pulanos</groupId>
 	<artifactId>pangu-parent</artifactId>
 	<version>${pangu.version}</version>
 	<packaging>pom</packaging>
 	<name>parent of pangu rapid development framework</name>
 	<description>the parent of pangu rapid development framework</description>
-	<url>https://gitee.com/pulanit/pangu</url>
+	<url>https://gitee.com/pulanos/pangu</url>
 
 	<licenses>
 		<license>
@@ -35,9 +35,9 @@
 	</licenses>
 
 	<scm>
-		<url>https://gitee.com/pulanit/pangu.git</url>
-		<connection>scm:https://gitee.com/pulanit/pangu.git</connection>
-		<developerConnection>scm:https://gitee.com/pulanit/pangu.git</developerConnection>
+		<url>https://gitee.com/pulanos/pangu.git</url>
+		<connection>scm:https://gitee.com/pulanos/pangu.git</connection>
+		<developerConnection>scm:https://gitee.com/pulanos/pangu.git</developerConnection>
 	</scm>
 
 	<developers>
@@ -49,7 +49,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.gitee.pulanit</groupId>
+			<groupId>com.gitee.pulanos</groupId>
 			<artifactId>pangu-basic</artifactId>
 			<version>${pangu.version}</version>
 		</dependency>
@@ -67,7 +67,7 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-				<groupId>com.gitee.pulanit</groupId>
+				<groupId>com.gitee.pulanos</groupId>
 				<artifactId>pangu-dependencies</artifactId>
 				<version>5.0.0</version>
 				<type>pom</type>
