--- a/pangu-dependencies/pom.xml
+++ b/pangu-dependencies/pom.xml
@@ -4,7 +4,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.gitee.pulanos</groupId>
+	<groupId>com.gitee.pulanos.pangu</groupId>
 	<artifactId>pangu-dependencies</artifactId>
 	<version>5.0.0</version>
 	<packaging>pom</packaging>
