--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	
-	<groupId>com.gitee.pulanos</groupId>
+	<groupId>com.gitee.pulanos.pangu</groupId>
 	<artifactId>pangu-all</artifactId>
 	<packaging>pom</packaging>
 	<version>5.0.0</version>
-	<name>pangu rapid development framework</name>
+	<name>pangu dev framework</name>
 	
 	<modules>
 	    <module>pangu-parent</module>
