--- a/pangu-basic/pom.xml
+++ b/pangu-basic/pom.xml
@@ -3,13 +3,19 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+	<parent>
+		<groupId>com.gitee.pulanos.pangu</groupId>
+		<artifactId>pangu-parent</artifactId>
+		<version>5.0.0</version>
+		<relativePath />
+	</parent>
+
 	<groupId>com.gitee.pulanos.pangu</groupId>
-	<version>5.0.0</version>
 	<artifactId>pangu-basic</artifactId>
+	<version>5.0.0</version>
 	<packaging>jar</packaging>
 	<name>pangu-basic</name>
-	<description>the basic lib of pangu rapid development framework</description>
+	<description>the basic lib of pangu development framework</description>
 
 	<properties>
 		<java.version>1.8</java.version>
