update pom file.

--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,6 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>cn.hutool</groupId>
@@ -180,20 +179,20 @@
 					</execution>
 				</executions>
 			</plugin>
-			<!--			<plugin>-->
-			<!--				<groupId>org.apache.maven.plugins</groupId>-->
-			<!--				<artifactId>maven-gpg-plugin</artifactId>-->
-			<!--				<version>1.6</version>-->
-			<!--				<executions>-->
-			<!--					<execution>-->
-			<!--						<id>sign-artifacts</id>-->
-			<!--						<phase>verify</phase>-->
-			<!--						<goals>-->
-			<!--							<goal>sign</goal>-->
-			<!--						</goals>-->
-			<!--					</execution>-->
-			<!--				</executions>-->
-			<!--			</plugin>-->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<version>1.6</version>
+				<executions>
+					<execution>
+						<id>sign-artifacts</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>sign</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
