--- a/pom.xml
+++ b/pom.xml
@@ -19,12 +19,12 @@
 	</parent>
 
 	<groupId>com.gitee.pulanos.pangu</groupId>
-	<artifactId>pangu-parent</artifactId>
+	<artifactId>pangu-framework</artifactId>
 	<version>5.0.0</version>
 	<packaging>jar</packaging>
-	<name>pangu-parent</name>
+	<name>pangu-framework</name>
 	<description>pangu development framework</description>
-	<url>https://gitee.com/pulanos/pangu</url>
+	<url>https://gitee.com/pulanos/pangu-framework</url>
 
 	<licenses>
 		<license>
@@ -35,9 +35,9 @@
 	</licenses>
 
 	<scm>
-		<url>https://gitee.com/pulanos/pangu.git</url>
-		<connection>scm:https://gitee.com/pulanos/pangu.git</connection>
-		<developerConnection>scm:https://gitee.com/pulanos/pangu.git</developerConnection>
+		<url>https://gitee.com/pulanos/pangu-framework.git</url>
+		<connection>scm:https://gitee.com/pulanos/pangu-framework.git</connection>
+		<developerConnection>scm:https://gitee.com/pulanos/pangu-framework.git</developerConnection>
 	</scm>
 
 	<developers>
