调整项目结构

--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
+	<groupId>com.gitee.pulanos.pangu</groupId>
+	<artifactId>pangu-framework-all</artifactId>
+	<packaging>pom</packaging>
+	<version>5.0.0</version>
+
 	<modules>
 		<module>pangu-framework-parent</module>
 		<module>pangu-framework-base</module>
