--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,9 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.gitee.pulanos.pangu</groupId>
-	<artifactId>pangu-framework-all</artifactId>
+	<artifactId>pangu-framework</artifactId>
 	<packaging>pom</packaging>
-	<version>5.0.0</version>
+	<version>5.0.1</version>
 
 	<modules>
 		<module>pangu-framework-parent</module>
